--- a/src/GlobalStyles.css
+++ b/src/GlobalStyles.css
@@ -65,3 +65,34 @@ pre {
     white-space: -o-pre-wrap;
     word-wrap: break-word;
 }
+
+
+@-webkit-keyframes swinging{
+    0%{-webkit-transform: rotate(10deg);}
+    50%{-webkit-transform: rotate(-5deg)}
+    100%{-webkit-transform: rotate(10deg);}
+}
+
+@keyframes swinging{
+    0%{transform: rotate(10deg);}
+    50%{transform: rotate(-5deg)}
+    100%{transform: rotate(10deg);}
+}
+
+.swingimage{
+    -webkit-transform-origin: 50% 0;
+    transform-origin: 50% 0;
+    -webkit-animation: swinging 3.5s ease-in-out forwards infinite;
+    animation: swinging 3.5s ease-in-out forwards infinite;
+    width: 200px;
+    height: 150px;
+}
+
+.cryingImage{
+    width: 150px;
+    height: 150px;
+}
+
+.iphone0{
+
+}
