--- a/src/GlobalStyles.css
+++ b/src/GlobalStyles.css
@@ -56,7 +56,6 @@ body{
     left: 0;
 }
 
-
 pre {
     overflow-x: auto;
     white-space: pre-wrap;
@@ -65,7 +64,6 @@ pre {
     white-space: -o-pre-wrap;
     word-wrap: break-word;
 }
-
 
 @-webkit-keyframes swinging{
     0%{-webkit-transform: rotate(10deg);}
@@ -101,6 +99,6 @@ pre {
     height: 150px;
 }
 
-.iphone0{
-
+.BreadBaked{
+    font-size: 16px;
 }
